cmake_minimum_required(VERSION 3.27)
project(_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(_cpp main.cpp)
add_executable(ftp_server ftp/ftp_server.cpp)
add_executable(ftp_client ftp/ftp_client.cpp)
add_executable(variables Cpp/基础/data_variables.cpp)
add_executable(inline_function Cpp/基础/inline_function.cpp)
add_executable(function_overloading Cpp/基础/function_overloading.cpp)
add_executable(class_create Cpp/面向对象/class_create.cpp)
add_executable(Polymorphism Cpp/面向对象/polymorphism.cpp)
add_executable(friend_function Cpp/面向对象/friend_function.cpp)
add_executable(function_template Cpp/模板/function_template.cpp)
add_executable(class_template Cpp/模板/class_template.cpp)
add_executable(container_vector Cpp/模板/容器/container_vector.cpp)
add_executable(container_list Cpp/模板/容器/container_list.cpp)
add_executable(container_map Cpp/模板/容器/container_map.cpp)
add_executable(iterator_test Cpp/模板/迭代器/iterator_test.cpp)
add_executable(algorithm_test Cpp/模板/算法/algorithm_test.cpp)
add_executable(python_dict Cpp/模拟Python的字典数据类型.cpp)
add_executable(TraverseTheString Cpp/基础/字符串/遍历字符串.cpp)
add_executable(english_words Cpp/基础/字符串/英文单词.cpp)
